<resources>
    <string name="app_name">Digital House Foods</string>
    <!-- user_email_password -->
    <string name="ti_email">Email</string>
    <string name="ti_password">Password</string>

    <!-- activity_main -->
    <string name="btn_login">Log in</string>
    <string name="tv_or">Or</string>
    <string name="btn_register">Register</string>

    <!-- activity_register -->
    <string name="ti_name">Name</string>
    <string name="ti_confirm_password">Confirm password</string>
    <string name="password_warning">Your password must be at least 8 characters long!</string>
    <string name="passwords_dont_match">Passwords do not match!</string>

    <!-- item_restaurant -->
    <string name="iv_restaurant">Photo of the restaurant</string>
    <string name="tv_closing_time">Fecha às %s</string>

    <!-- activity_restaurant_details -->
    <string name="ib_back_arrow">Back arrow</string>

</resources>